# youtube-subtitles-fetcher

./: .gitignore  README.md  app.py  config.example.yaml  pyproject.toml
docs/: HANDOFF.md  ROADMAP.md  TROUBLESHOOTING.md  VALIDATION.md
scripts/: fetch_youtube_subtitles.py
